--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                   <li class="envelope">
                     <a class="contact-text mail contact-icons" href="mailto:info@devstudio.com">
                       <svg class="contact-icons" width="16px" height="12px">
-                        <use href="#icon-envelope"></use>
+                        <use href="images/icons.svg/sprite.svg#icon-envelope"></use>
                       </svg>
                       info@devstudio.com</a
                     >
@@ -46,7 +46,7 @@
                   <li class="smartphone">
                     <a class="contact-text phone contact-icons" href="tel:+48111111111">
                       <svg class="contact-icons" width="10px" height="16px">
-                        <use href="#icon-smartphone"></use>
+                        <use href="images/icons.svg/sprite.svg#icon-smartphone"></use>
                       </svg>
                       +48 111 111 111</a
                     >
@@ -260,44 +260,44 @@
             <section class="clients-section section">
               <h2 class="gray-section-heading">Nasi klienci</h2>
               <ul class="clients-box">
-                <li>
-                  <a class="logo-box">
-                    <svg width="41" height="46.7">
+                <li class="logo-box">
+                  <a class="logo-hover">
+                    <svg class="logo-hover" width="41" height="46.7">
                       <use href="images/icons.svg/sprite.svg#icon-logo1"></use>
                     </svg>
                   </a>
                 </li>
-                <li>
-                  <a class="logo-box">
-                    <svg width="40" height="52">
+                <li class="logo-box">
+                  <a class="logo-hover">
+                    <svg class="logo-hover" width="40" height="52">
                       <use href="images/icons.svg/sprite.svg#icon-logo2"></use>
                     </svg>
                   </a>
                 </li>
-                <li>
-                  <a class="logo-box">
-                    <svg width="43.46" height="41.18">
+                <li class="logo-box">
+                  <a class="logo-hover">
+                    <svg class="logo-hover" width="43.46" height="41.18">
                       <use href="images/icons.svg/sprite.svg#icon-logo3"></use>
                     </svg>
                   </a>
                 </li>
-                <li>
-                  <a class="logo-box">
-                    <svg width="84.44" height="40.62">
+                <li class="logo-box">
+                  <a class="logo-hover">
+                    <svg class="logo-hover" width="84.44" height="40.62">
                       <use href="images/icons.svg/sprite.svg#icon-logo4"></use>
                     </svg>
                   </a>
                 </li>
-                <li>
-                  <a class="logo-box">
-                    <svg width="62.54" height="45.43">
+                <li class="logo-box">
+                  <a class="logo-hover">
+                    <svg class="logo-hover" width="62.54" height="45.43">
                       <use href="images/icons.svg/sprite.svg#icon-logo5"></use>
                     </svg>
                   </a>
                 </li>
-                <li>
-                  <a class="logo-box">
-                    <svg width="93.79" height="43.93">
+                <li class="logo-box">
+                  <a class="logo-hover">
+                    <svg class="logo-hover" width="93.79" height="43.93">
                       <use href="images/icons.svg/sprite.svg#icon-logo6"></use>
                     </svg>
                   </a>
