--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
                   <li>
                     <a class="contact-text mail contact-icons" href="mailto:info@devstudio.com">
                       <svg class="contact-icons" width="16px" height="12px">
-                        <use href="#icon-envelope"></use>
+                        <use href="images/icons.svg/sprite.svg#icon-envelope"></use>
                       </svg>
                       info@devstudio.com</a
                     >
@@ -44,7 +44,7 @@
                   <li>
                     <a class="contact-text phone contact-icons" href="tel:+48111111111">
                       <svg class="contact-icons" width="10px" height="16px">
-                        <use href="#icon-smartphone"></use>
+                        <use href="images/icons.svg/sprite.svg#icon-smartphone"></use>
                       </svg>
                       +48 111 111 111</a
                     >
