--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
                 <ul class="list contact">
                   <li class="envelope">
                     <a class="contact-text mail contact-icons" href="mailto:info@devstudio.com">
-                      <svg class="contact-icons" width="16px" height="12px">
-                        <use href="images/icons.svg/sprite.svg#icon-envelope"></use>
+                      <svg class="contact-icons">
+                        <use width="16px" height="12px" href="images/icons.svg/sprite.svg#icon-envelope"></use>
                       </svg>
                       info@devstudio.com</a
                     >
                   </li>
                   <li class="smartphone">
                     <a class="contact-text phone contact-icons" href="tel:+48111111111">
-                      <svg class="contact-icons" width="10px" height="16px">
-                        <use href="images/icons.svg/sprite.svg#icon-smartphone"></use>
+                      <svg class="contact-icons">
+                        <use width="10px" height="16px" href="images/icons.svg/sprite.svg#icon-smartphone"></use>
                       </svg>
                       +48 111 111 111</a
                     >
