--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@
               </div>
               <div class="header-rightside">
                 <ul class="list contact">
-                  <li class="envelope">
+                  <li>
                     <a class="contact-text mail contact-icons" href="mailto:info@devstudio.com">
-                      <svg class="contact-icons">
-                        <use width="16px" height="12px" href="images/icons.svg/sprite.svg#icon-envelope"></use>
+                      <svg width="16px" height="12px" class="contact-icons">
+                        <use  href="images/icons.svg/sprite.svg#icon-envelope"></use>
                       </svg>
                       info@devstudio.com</a
                     >
                   </li>
-                  <li class="smartphone">
+                  <li>
                     <a class="contact-text phone contact-icons" href="tel:+48111111111">
-                      <svg class="contact-icons">
-                        <use width="10px" height="16px" href="images/icons.svg/sprite.svg#icon-smartphone"></use>
+                      <svg width="10px" height="16px" class="contact-icons">
+                        <use href="images/icons.svg/sprite.svg#icon-smartphone"></use>
                       </svg>
                       +48 111 111 111</a
                     >
