--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
               <div class="header-rightside">
                 <ul class="list contact">
                   <li>
-                    <a class="contact-text mail contact-icons" href="mailto:info@devstudio.com">
-                      <svg width="16px" height="12px" class="contact-icons">
-                        <use  href="images/icons.svg/sprite.svg#icon-envelope"></use>
+                    <a class="contact-text mail" href="mailto:info@devstudio.com">
+                      <svg class="contact-icons" width="16px" height="12px">
+                        <use href="images/icons.svg/sprite.svg#icon-envelope"></use>
                       </svg>
                       info@devstudio.com</a
                     >
                   </li>
                   <li>
-                    <a class="contact-text phone contact-icons" href="tel:+48111111111">
-                      <svg width="10px" height="16px" class="contact-icons">
+                    <a class="contact-text phone" href="tel:+48111111111">
+                      <svg class="contact-icons" width="10px" height="16px">
                         <use href="images/icons.svg/sprite.svg#icon-smartphone"></use>
                       </svg>
                       +48 111 111 111</a
