--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
               <div class="header-rightside">
                 <ul class="list contact">
                   <li>
-                    <a class="contact-text mail contact-icons" href="mailto:info@devstudio.com">
+                    <a class="contact-text mail" href="mailto:info@devstudio.com">
                       <svg class="contact-icons" width="16px" height="12px">
                         <use href="images/icons.svg/sprite.svg#icon-envelope"></use>
                       </svg>
@@ -42,7 +42,7 @@
                     >
                   </li>
                   <li>
-                    <a class="contact-text phone contact-icons" href="tel:+48111111111">
+                    <a class="contact-text phone" href="tel:+48111111111">
                       <svg class="contact-icons" width="10px" height="16px">
                         <use href="images/icons.svg/sprite.svg#icon-smartphone"></use>
                       </svg>
