--- a/index.html
+++ b/index.html
@@ -260,43 +260,43 @@
             <section class="clients-section section">
               <h2 class="gray-section-heading">Nasi klienci</h2>
               <ul class="clients-box">
-                <li class="logo-box">
-                  <a>
+                <li>
+                  <a class="logo-box">
                     <svg width="41" height="46.7">
                       <use class="logo-hover" href="images/icons.svg/sprite.svg#icon-logo1"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="logo-box">
-                  <a>
+                <li>
+                  <a class="logo-box">
                     <svg width="40" height="52">
                       <use class="logo-hover" href="images/icons.svg/sprite.svg#icon-logo2"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="logo-box">
-                  <a>
+                <li>
+                  <a class="logo-box">
                     <svg width="43.46" height="41.18">
                       <use class="logo-hover" href="images/icons.svg/sprite.svg#icon-logo3"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="logo-box">
-                  <a>
+                <li>
+                  <a class="logo-box">
                     <svg width="84.44" height="40.62">
                       <use class="logo-hover" class="icon-" href="images/icons.svg/sprite.svg#icon-logo4"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="logo-box">
-                  <a>
+                <li>
+                  <a class="logo-box">
                     <svg width="62.54" height="45.43">
                       <use class="logo-hover" href="images/icons.svg/sprite.svg#icon-logo5"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="logo-box">
-                  <a>
+                <li>
+                  <a class="logo-box">
                     <svg width="93.79" height="43.93">
                       <use class="logo-hover" href="images/icons.svg/sprite.svg#icon-logo6"></use>
                     </svg>
