--- a/index.html
+++ b/index.html
@@ -260,45 +260,45 @@
             <section class="clients-section section">
               <h2 class="gray-section-heading">Nasi klienci</h2>
               <ul class="clients-box">
-                <li>
-                  <a class="logo-box">
-                    <svg width="41" height="46.7">
-                      <use class="logo-hover" href="images/icons.svg/sprite.svg#icon-logo1"></use>
+                <li class="logo-box">
+                  <a class="logo-hover">
+                    <svg class="logo-hover" width="41" height="46.7">
+                      <use href="images/icons.svg/sprite.svg#icon-logo1"></use>
                     </svg>
                   </a>
                 </li>
-                <li>
-                  <a class="logo-box">
-                    <svg width="40" height="52">
-                      <use class="logo-hover" href="images/icons.svg/sprite.svg#icon-logo2"></use>
+                <li class="logo-box">
+                  <a class="logo-hover">
+                    <svg class="logo-hover" width="40" height="52">
+                      <use href="images/icons.svg/sprite.svg#icon-logo2"></use>
                     </svg>
                   </a>
                 </li>
-                <li>
-                  <a class="logo-box">
-                    <svg width="43.46" height="41.18">
-                      <use class="logo-hover" href="images/icons.svg/sprite.svg#icon-logo3"></use>
+                <li class="logo-box">
+                  <a class="logo-hover">
+                    <svg class="logo-hover" width="43.46" height="41.18">
+                      <use href="images/icons.svg/sprite.svg#icon-logo3"></use>
                     </svg>
                   </a>
                 </li>
-                <li>
-                  <a class="logo-box">
-                    <svg width="84.44" height="40.62">
-                      <use class="logo-hover" class="icon-" href="images/icons.svg/sprite.svg#icon-logo4"></use>
+                <li class="logo-box">
+                  <a class="logo-hover">
+                    <svg class="logo-hover" width="84.44" height="40.62">
+                      <use href="images/icons.svg/sprite.svg#icon-logo4"></use>
                     </svg>
                   </a>
                 </li>
-                <li>
-                  <a class="logo-box">
-                    <svg width="62.54" height="45.43">
-                      <use class="logo-hover" href="images/icons.svg/sprite.svg#icon-logo5"></use>
+                <li class="logo-box">
+                  <a class="logo-hover">
+                    <svg class="logo-hover" width="62.54" height="45.43">
+                      <use href="images/icons.svg/sprite.svg#icon-logo5"></use>
                     </svg>
                   </a>
                 </li>
-                <li>
-                  <a class="logo-box">
-                    <svg width="93.79" height="43.93">
-                      <use class="logo-hover" href="images/icons.svg/sprite.svg#icon-logo6"></use>
+                <li class="logo-box">
+                  <a class="logo-hover">
+                    <svg class="logo-hover" width="93.79" height="43.93">
+                      <use href="images/icons.svg/sprite.svg#icon-logo6"></use>
                     </svg>
                   </a>
                 </li>
