--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
               </div>
               <div class="header-rightside">
                 <ul class="list contact">
-                  <li>
+                  <li class="contact-hover">
                     <a class="contact-text mail" href="mailto:info@devstudio.com">
                       <svg class="contact-icons" width="16px" height="12px">
                         <use href="images/icons.svg/sprite.svg#icon-envelope"></use>
@@ -41,7 +41,7 @@
                       info@devstudio.com</a
                     >
                   </li>
-                  <li>
+                  <li class="contact-hover">
                     <a class="contact-text phone" href="tel:+48111111111">
                       <svg class="contact-icons" width="10px" height="16px">
                         <use href="images/icons.svg/sprite.svg#icon-smartphone"></use>
