--- a/portfolio.html
+++ b/portfolio.html
@@ -68,63 +68,92 @@
             <ul class="list image-list">
               <li>
                 <div class="images-section">
-                  <img src="images/pic1.jpg" alt="Grafika prezentująca laptop z otwartą stroną internetową" width="370" height="294" />
+                  <div class="card-animation-box">
+                    <img src="images/pic1.jpg" alt="Grafika prezentująca laptop z otwartą stroną internetową" width="370" height="294" />
+                    <div class="card-animation">
+                      <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                    </div>
+                  </div>
                   <p class="image-description">Technocrack</p>
                   <p class="additional-image-description">Strona internetowa</p>
                 </div>
               </li>
               <li>
                 <div class="images-section">
-                  <img src="images/pic2.jpg" alt="Grafika prezentująca dwójkę koszykarzy" width="370" height="294" />
+                  <div class="card-animation-box">
+                    <img src="images/pic2.jpg" alt="Grafika prezentująca dwójkę koszykarzy" width="370" height="294" />
+                    <div class="card-animation"></div>
+                  </div>
                   <p class="image-description">Grafika New Orlean vs Golden Star</p>
                   <p class="additional-image-description">Dizajn</p>
                 </div>
               </li>
               <li>
                 <div class="images-section">
-                  <img src="images/pic3.jpg" alt="Grafika prezentująca szyld restauracji" width="370" height="294" />
+                  <div class="card-animation-box">
+                    <img src="images/pic3.jpg" alt="Grafika prezentująca szyld restauracji" width="370" height="294" />
+                    <div class="card-animation"></div>
+                  </div>
                   <p class="image-description">Restauracja Seafood</p>
                   <p class="additional-image-description">Aplikacja</p>
                 </div>
               </li>
               <li>
                 <div class="images-section">
-                  <img src="images/pic4.jpg" alt="Grafika prezentująca słuchawki" width="370" height="294" />
+                  <div class="card-animation-box">
+                    <img src="images/pic4.jpg" alt="Grafika prezentująca słuchawki" width="370" height="294" />
+                    <div class="card-animation"></div>
+                  </div>
                   <p class="image-description">Projekt Prime</p>
                   <p class="additional-image-description">Marketing</p>
                 </div>
               </li>
               <li>
                 <div class="images-section">
-                  <img src="images/pic5.jpg" alt="Grafika prezentująca dwa pudełka z nadrukami" width="370" height="294" />
+                  <div class="card-animation-box">
+                    <img src="images/pic5.jpg" alt="Grafika prezentująca dwa pudełka z nadrukami" width="370" height="294" />
+                    <div class="card-animation"></div>
+                  </div>
                   <p class="image-description">Projekt Boxes</p>
                   <p class="additional-image-description">Dizajn</p>
                 </div>
               </li>
               <li>
                 <div class="images-section">
-                  <img src="images/pic6.jpg" alt="Grafika prezentująca monitor z otwartą stroną internetową" width="370" height="294" />
+                  <div class="card-animation-box">
+                    <img src="images/pic6.jpg" alt="Grafika prezentująca monitor z otwartą stroną internetową" width="370" height="294" />
+                    <div class="card-animation"></div>
+                  </div>
                   <p class="image-description">Inspiration has no Borders</p>
                   <p class="additional-image-description">Strona internetowa</p>
                 </div>
               </li>
               <li>
                 <div class="images-section">
-                  <img src="images/pic7.jpg" alt="Grafika prezentująca otwarte czasopismo" width="370" height="294" />
+                  <div class="card-animation-box">
+                    <img src="images/pic7.jpg" alt="Grafika prezentująca otwarte czasopismo" width="370" height="294" />
+                    <div class="card-animation"></div>
+                  </div>
                   <p class="image-description">Magazyn Limited Edition</p>
                   <p class="additional-image-description">Dizajn</p>
                 </div>
               </li>
               <li>
                 <div class="images-section">
-                  <img src="images/pic8.jpg" alt="Grafika prezentująca metkę z logo" width="370" height="294" />
+                  <div class="card-animation-box">
+                    <img src="images/pic8.jpg" alt="Grafika prezentująca metkę z logo" width="370" height="294" />
+                    <div class="card-animation"></div>
+                  </div>
                   <p class="image-description">Projekt LAB</p>
                   <p class="additional-image-description">Marketing</p>
                 </div>
               </li>
               <li>
                 <div class="images-section">
-                  <img src="images/pic9.jpg" alt="Grafika prezentująca dłonie wpisujące tekst na klawiaturze laptopa" width="370" height="294" />
+                  <div class="card-animation-box">
+                    <img src="images/pic9.jpg" alt="Grafika prezentująca dłonie wpisujące tekst na klawiaturze laptopa" width="370" height="294" />
+                    <div class="card-animation"></div>
+                  </div>
                   <p class="image-description">Growing Business</p>
                   <p class="additional-image-description">Aplikacja</p>
                 </div>
